--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -54,6 +54,7 @@
               <th>Position</th>
               <th>Type</th>
               <th>Date limite</th>
+              <th>Date d'ajout</th>
               <th>Statut</th>
               <th>Entreprise</th>
               <th>Région</th>
