--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -90,7 +90,7 @@
                 <label class="font-bold">Date limite de candidature</label>
                 <div class="input-group date">
                   <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
-                  <input class="form-control" name="date_limit" appDatepicker readonly="readonly" [(ngModel)]="Editor.dateLimit" [value]="Editor.dateLimit" type="text"
+                  <input class="form-control" name="date_limit" format="dd/mm/yyyy" appDatepicker readonly="readonly" [(ngModel)]="Editor.dateLimit" [value]="Editor.dateLimit" type="text"
                     placeholder="Date limite de publication">
                 </div>
               </div>
