--- a/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
+++ b/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
@@ -32,7 +32,11 @@
                   <input class="form-control" appDatepicker [format]="'yyyy-mm-dd hh:ii:ss'" [minView]="0" readonly="readonly" 
                     name="dateLimit" type="text" [value]="dateLimit" [(ngModel)]="dateLimit" placeholder="Date limite"
                     autocomplete="off" required>
-
+                </div>
+                <div class="mt-2 font-12">
+                    <small class="float-right badge badge-info ml-1 ml-2"><i class="ti-alarm-clock"></i> 
+                  {{ dateLimit | momendate:'LLLL' }}
+                  </small>
                 </div>
               </div>
             </div>
