--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -22,7 +22,7 @@
               <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
             </div>
           </div>
-          <app-activity-area class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
+          <app-activity-area [title]="'secteurs d\'activités'" class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
         </div>
 
         <div class="row">
