--- a/src/app/dashboard/newsletters/newsletters.component.html
+++ b/src/app/dashboard/newsletters/newsletters.component.html
@@ -1,6 +1,6 @@
 <div class="page-content fade-in-up">
-  <app-view-newsletter></app-view-newsletter>
-  <app-new-newsletter></app-new-newsletter>
+  <app-view-newsletter [post]="letter"></app-view-newsletter>
+  <app-new-newsletter (onSend)="onSendNewsletter($event)"></app-new-newsletter>
   <div class="ibox">
     <div class="ibox-body">
       <h5 class="font-strong mb-4">LES NEWSLETTERS</h5>
@@ -17,6 +17,11 @@
         </div>
 
       </form>
+      <div class="row">
+        <div class="col-4">
+          <button class="btn btn-outline-blue btn-sm" (click)="onNewNewsletter()">Ajouter letter d'information </button>
+        </div>
+      </div>
 
       <div class="table-responsive row">
         <table class="table table-bordered table-hover" id="newsletter-table">
@@ -33,27 +38,4 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="ibox ibox-fullheight">
-        <div class="ibox-head">
-          <div class="ibox-title">
-            <span class="btn-icon-only btn-circle bg-primary-50 text-primary mr-3"><i class="ti-email"></i></span>Email
-            distribution</div>
-        </div>
-        <div class="ibox-body">
-          <div class="flexbox mb-4">
-            <div class="flexbox">
-              <span class="flexbox mr-3">
-                <span class="mr-2 text-muted">Envoyer</span>
-                <span class="h3 mb-0 text-primary font-strong">{{offset}}</span>
-              </span>
-            </div>
-            <a class="flexbox" (click)="sendWelcomeMail()" target="_blank">WELCOME EMAIL<i class="ti-arrow-circle-right ml-2 font-18"></i></a>
-          </div>
-          
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
