--- a/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
+++ b/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
@@ -36,7 +36,7 @@
           </div>
 
           <div class="col-sm-12" *ngIf="Candidates.length > 0">
-            <div class="">Le candidate</div>
+            <div class="">Le candidat</div>
             <div class="ibox-body">
               <ul class="media-list media-list-divider mr-2">
                 <li class="media align-items-center" *ngFor="let candidate of Candidates">
