--- a/src/app/dashboard/settings/settings.component.html
+++ b/src/app/dashboard/settings/settings.component.html
@@ -1,3 +1,83 @@
-<p>
-  settings works!
-</p>
+<div class="row mt-4">
+  <div class="col-lg-5">
+    <div class="ibox">
+      <div class="ibox-body">
+        <h5 class="font-strong mb-4">LES UTILISATEURS</h5>
+        <small class="text-muted">Administrateur & Commercial</small>
+        <ul class="media-list media-list-divider mr-2">
+          <li class="media align-items-center" *ngFor="let user of users">
+            <div class="media-body d-flex align-items-center">
+              <div class="flex-1">
+                <div class="media-heading">{{ user.name }}</div><small class="text-muted">{{ user.email }}</small>
+              </div>
+              <button (click)="onEditUser(user)" class="btn btn-sm btn-outline-secondary btn-rounded">Modifier</button>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="edit-user-modal" data-keyboard="false" data-backdrop="static">
+  <div class="modal-dialog modal-md" role="document">
+    <form class="modal-content" #editUser="ngForm" (ngSubmit)="onSubmitForm( editUser )">
+      <div class="modal-header p-4">
+        <h5 class="modal-title">Modifier de mot de passe d'utilisateur</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body p-4">
+        <div class="row">
+            <div class="col-sm-12 mb-4">
+              <div class="form-group">
+                <label class="font-bold">Adresse email</label>
+                <input class="form-control from-control-solid" autocomplete="off" name="email" #email="ngModel" [(ngModel)]="Form.email" [disabled]="true" type="text"
+                   placeholder="" required>
+              </div>
+            </div>
+          </div>
+
+        <div class="row">
+          <div class="col-sm-12 mb-4">
+            <div class="form-group">
+              <label class="font-bold">Nouveau mot de passe</label>
+              <input class="form-control from-control-solid" ngModel autocomplete="off" #pwd="ngModel" name="pwd" type="password"
+                 placeholder="Ajouter un nouveau mot de passe" required>
+              <div class="badge badge-pink mt-2" *ngIf="pwd.invalid && (pwd.dirty || pwd.touched)">
+                <div *ngIf="pwd.errors['required']">Ce champ est requis</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-12 form-group mb-4">
+            <label class="font-bold">Confirmation de mot de passe</label>
+            <input class="form-control from-control-solid" ngModel autocomplete="off" name="pwdconf" #pwdconf='ngModel' compare="pwd" type="password"
+               placeholder="Confirmation" required>
+            <div class="badge badge-pink mt-2" *ngIf="pwdconf.invalid && (pwdconf.dirty || pwdconf.touched)">
+              <div *ngIf="pwdconf.errors['required']">Ce champ est requis</div>
+              <div *ngIf="pwdconf.errors['compare']">Le mot de passe n'est pas identique</div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+      <div class="modal-footer justify-content-between bg-primary-50">
+        <div>
+          <button class="btn btn-primary mr-3" type="submit" >
+            <input type="hidden" name="ID" [(ngModel)]="Form.ID">
+            <span>Changer le mot de passe</span>
+          </button>
+          <button class="btn btn-default mr-3" type="button" data-dismiss="modal">
+            <span>Fermer</span>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
