--- a/src/app/dashboard/company/company-edit/company-edit.component.html
+++ b/src/app/dashboard/company/company-edit/company-edit.component.html
@@ -125,7 +125,7 @@
                   <label class="checkbox checkbox-info">
                     <input [checked]="editor.notification" [(ngModel)]="editor.notification"
                       name="notification" type="checkbox">
-                    <span class="input-span"></span>Voulez-vous recevoir nos nouvelles du mois</label>
+                    <span class="input-span"></span>Recevoir les nouvelles du mois</label>
                 </div>
               </div>
               <div class="col-12">
