--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -37,6 +37,18 @@
           </h5><small class="menu-item-text">Voir les offres</small>
         </div>
       </a>
+      <a [routerLink]="['/formations']" routerLinkActive="router-link-active"><i class="la la-clipboard menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Formations
+          </h5><small class="menu-item-text">Voir les formations</small>
+        </div>
+      </a>
+      <a [routerLink]="['/request-formations']" routerLinkActive="router-link-active"><i class="la la-clipboard menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Demande formations
+          </h5><small class="menu-item-text">Voir les demande de formation</small>
+        </div>
+      </a>
       <a [routerLink]="['/ads']" routerLinkActive="router-link-active"><i class="la la-bullhorn menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Publicités
