Implement save formation featured

--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -69,7 +69,7 @@
                 <th>Statut</th>
                 <th>Position</th>
                 <th>Emploi rechercher</th>
-                <th>Date d'inscription</th>
+                <th>Date publication</th>
                 <th class="no-sort">Action</th>
               </tr>
             </thead>
