--- a/src/app/dashboard/formations/formations.component.html
+++ b/src/app/dashboard/formations/formations.component.html
@@ -51,14 +51,76 @@
               <th>Position</th>
               <th>Nom de l'établissement</th>
               <th>Date limite</th>
-              <th>Date d'ajout</th>
+              <th>Date publication</th>
               <th>Région</th>
               <th class="no-sort">Action</th>
             </tr>
           </thead>
-
         </table>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="modal fade" id="edit-featured-formation-modal">
+  <div class="modal-dialog" role="document">
+    <form #featuredForm="ngForm" class="modal-content" (ngSubmit)="onSaveFeatured( featuredForm )">
+      <div class="modal-header p-4">
+        <h5 class="modal-title">Position de la formation</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body p-4">
+        <div class="row">
+          <div class="col-12">
+            <div class="col-sm-12 mb-2">
+              <h4>{{ Feature.title }}</h4>
+            </div>
+
+            <div class="col-sm-12 mb-4">
+              <div class="form-group">
+                <label>Position</label>
+                <select class="form-control" name="position" [value]="Feature.featured" [(ngModel)]="Feature.featured"
+                  data-style="btn-solid">
+                  <option value="0">Aucun</option>
+                  <option value="1">A la une</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="col-sm-12 mb-4" [ngClass]="{'d-none': Feature.featured == 0}">
+              <div class="form-group">
+                <label>Date limite</label>
+                <div class="input-group date">
+                  <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
+                  <input class="form-control" appDatepicker [format]="'yyyy-mm-dd hh:ii:ss'" [minView]="0" readonly="readonly"
+                    name="featured_datelimit" type="text" [value]="Feature.featured_datelimit" [(ngModel)]="Feature.featured_datelimit"
+                    placeholder="Date limite" autocomplete="off" required>
+                </div>
+                <div class="mt-2 font-12">
+                  <small class="float-right badge badge-info ml-1 ml-2"><i class="ti-alarm-clock"></i>
+                    {{ Feature.featured_datelimit | momendate:'LLLL' }}
+                  </small>
+                </div>
+              </div>
+            </div>
+            <input type="hidden" [(ngModel)]="Feature.ID" name="ID">
+          </div>
+
+        </div>
+      </div>
+      <div class="modal-footer justify-content-between bg-primary-50">
+        <div></div>
+        <div>
+          <button class="btn btn-primary mr-2" type="submit" [disabled]="loading">
+            <span>Enregistrer</span>
+          </button>
+          <button class="btn btn-default" data-dismiss="modal" type="button" [disabled]="loading">
+            <span>Annuler</span>
+          </button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
